--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,14 @@
             <img class="profile img-fluid d-block mx-auto mb-5 rounded-circle" src="/img/profile.jpeg" alt="{{ .Site.Title }}" data-aos="fade-up">
         </figure>
         <h1 data-aos="fade-up">I'am Roby Adi Putra</h1>
-        <p data-aos="fade-right">Junior Web Developer</p>
+        <div class="type-wrap" data-aos="fade-right">
+            <div id="typed-strings">
+                <span>
+                    <strong>Frontend Web Developer.</strong>
+                </span>
+            </div>
+            <span id="typed" style="white-space:pre;"></span>
+        </div>
         <ul class="social-media list-inline" data-aos="fade-left">
             <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#">
