--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -6,29 +6,35 @@
                 <figure><img class="about-image img-fluid rounded" src="/img/about-me.jpeg" alt="Roby Adi Putra"></figure>
             </div>
             <div class="col-lg">
-                <h3 class="about-name" data-aos="fade-up">I'am Roby</h3>
+                <h3 class="about-name mb-5" data-aos="fade-up">I'am Roby</h3>
                 <p data-aos="fade-up">Hei! My name is Roby, I'am a Web Developer. I have 2 tyears of experience on building webistes using HTML, CSS, JavaScript and WordPress. I also able to developing website using Frameworks, such as Bootstrap, React and any others technology.</p>
-                <a class="btn btn-info text-uppercase" data-aos="fade-up" href="#">Contact Now!</a>
+                <a class="btn btn-info text-uppercase mt-5" data-aos="fade-up" href="#">Contact Now!</a>
             </div>
         </div>
         <h5 class="text-center mt-5 mb-5" data-aos="fade-up">This is who I am in a nutshell</h5>
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-12 col-sm-12 mb-5" data-aos="fade-up">
-                    <div class="card" style="width: 18rem; height: 27rem;">
-                        <figure><img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-1.svg" alt="{{ .Site.Title }}"></figure>
+                    <div class="card" style="width: 18rem; height: 29rem;">
+                        <figure>
+                            <img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-1.svg" alt="{{ .Site.Title }}">
+                        </figure>
                         <div class="card-body text-center">I am graduated from Tourism School at Internation Tourism Collage, after graduated I worked in a Tours & Travel company engaged in operation based in Bali for 2 years and after that I joined PT Kebo Iwa Express as a booking agent, web developer and administration.</div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 mb-5" data-aos="fade-up">
-                    <div class="card" style="width: 18rem; height: 27rem;">
-                        <figure><img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-2.svg" alt="{{ .Site.Title }}"></figure>
+                    <div class="card" style="width: 18rem; height: 29rem;">
+                        <figure>
+                            <img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-2.svg" alt="{{ .Site.Title }}">
+                        </figure>
                         <div class="card-body text-center">I am a person who is very enthusiastic about technology especially programming and because I'am graduated from English, it makes it easier for me to learn programming to understand what programming is.</div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 mb-5" data-aos="fade-up">
-                    <div class="card" style="width: 18rem; height: 27rem;">
-                        <figure><img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-3.svg" alt="{{ .Site.Title }}"></figure>
+                    <div class="card" style="width: 18rem; height: 29rem;">
+                        <figure>
+                            <img class="card-image img-fluid d-block mx-auto card-img-top mt-3" src="/img/icon-about-3.svg" alt="{{ .Site.Title }}">
+                        </figure>
                         <div class="card-body text-center">My goal is to solve problems with technology. I believe anything can be overcome through commitment and hard work. Always up for learning new things.</div>
                     </div>
                 </div>
