--- a/layouts/partials/skills.html
+++ b/layouts/partials/skills.html
@@ -6,7 +6,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-html5"></i> HTML & <i class="fab fa-css3"></i> CSS</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-html5"></i> HTML & <i class="fab fa-css3"></i> CSS</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">70%</div>
                         </div>
@@ -14,7 +14,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-bootstrap"></i> Bootstrap</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-bootstrap"></i> Bootstrap</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">85%</div>
                         </div>
@@ -22,7 +22,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-phoenix-framework"></i> Materiallize</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-phoenix-framework"></i> Materiallize</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">75%</div>
                         </div>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-js-square"></i> JavaScript</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-js-square"></i> JavaScript</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 35%;">35%</div>
                         </div>
@@ -40,7 +40,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-react"></i> React Js</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-react"></i> React Js</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">40%</div>
                         </div>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-wordpress"></i> WordPress</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-wordpress"></i> WordPress</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;">65%</div>
                         </div>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-node-js"></i> Node Js</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-node-js"></i> Node Js</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">40%</div>
                         </div>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="card mb-2" data-aos="fade-up">
                     <div class="card-body">
-                        <h5 class="mt-3"><i class="fab fa-joget"></i> jQuery</h5>
+                        <h5 class="mt-3 mb-2"><i class="fab fa-joget"></i> jQuery</h5>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 55%;">55%</div>
                         </div>
