--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,11 +4,11 @@
         <div class="container" data-aos="fade-up">
             <h1 class="display-5 text-center mb-3">{{ .Page.Title }} | Blogs</h1>
             <hr class="my-2">
-            <!-- <p>More info:</p>
+            <p>More info:</p>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form> -->
+            </form>
         </div>
     </div>
     {{ range .Paginator.Pages }}
