--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -54,4 +54,5 @@
 <script src="{{ .Site.BaseURL }}plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="{{ .Site.BaseURL }}plugins/aos/aos.js"></script>
 <script src="{{ .Site.BaseURL }}plugins/typed/typed.min.js"></script>
+<script src="{{ .Site.BaseURL }}plugins/emailjs/email.min.js"></script>
 <script src="{{ .Site.BaseURL }}js/poinsla-site.js"></script>
