--- a/public/css/poinsla-style.css
+++ b/public/css/poinsla-style.css
@@ -104,10 +104,8 @@ header
 
 .hero {
     background-image: url(../img/background.jpg);
+    background-attachment: fixed;
     background-size: cover;
-    background-position: top;
-    background-repeat: no-repeat;
-    vertical-align: middle;
     min-height: 100vh;
     position: relative;
     z-index: -2;
